--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 <body style="background-image: url(./bg.jpg); background-size: cover;background-repeat: no-repeat;"
     class="container mx-auto ">
     <section class="stopwatch flex justify-center items-center h-[100vh] flex-col gap-20">
-        <h1
-            class="text-4xl text-center bg-white text-transparent bg-clip-text font-bold">
+        <h1 class="text-4xl text-center bg-white text-transparent bg-clip-text font-bold">
             DIGITAL CLOCK</h1>
         <div style="box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 10px 20px rgba(0,0,0,0.7);"
-            class="md:w-[60%] flex justify-center items-center flex-col px-5 py-16 gap-8 w-11/12 rounded-xl">
-            <h1 id="time" class="text-black font-bold max-w-xl text-4xl md:text-6xl text-center flex-1 ">00 : 00 :   00</h1>
-                <span id="time-format" class="text-2xl relative -top-6 font-bold">AM</span>
+            class="md:w-[60%] flex justify-center items-center gap-3 px-5 py-16 w-11/12 rounded-xl">
+            <h1 id="time" class="text-black font-bold max-w-xl text-4xl md:text-6xl text-center">00 : 00 : 00
+            </h1>
+            <div class=""><span id="time-format" class="text-xl relative bottom-2 font-bold">AM</span></div>
 
         </div>
     </section>
